syntax = "proto3";

package api.v1;

option go_package = "github.com/benjasper/releases.one/internal/gen/api/v1;apiv1";

import "google/protobuf/timestamp.proto";

message Release {
	string name = 1;
	string description = 2;
	string version = 3;
	string author = 4;
}

message Repository {
	string name = 1;
	string description = 2;
	string url = 3;
	string image_url = 4;
}

message TimelineEntry {
	int32 id = 1;
	int32 repository_id = 2;
	string name = 3;
	string url = 4;
	string tag_name = 5;
	string description = 6;
	bool is_prerelease = 7;
	google.protobuf.Timestamp released_at = 8;
	string repository_name = 9;
	string image_url = 10;
	string author = 11;
}

message SyncRequest {
	string username = 1;
}
message SyncResponse {
	repeated TimelineEntry timeline = 1;
}

message GetRepositoriesRequest {}
message GetRepositoriesResponse {
	repeated TimelineEntry timeline = 1;
}

service ApiService {
	rpc Sync(SyncRequest) returns (SyncResponse);
	rpc GetRepositories(GetRepositoriesRequest) returns (GetRepositoriesResponse);
}

message RefreshTokenRequest {
	int32 user_id = 1;
	string refresh_token = 2;
}

message RefreshTokenResponse {
	string access_token = 1;
	string refresh_token = 2;
}

service AuthService {
	rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}
